# pzem-edl

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  library.json  library.properties  platformio.ini
.github/workflows/: pio_build.yml  tg_rel_notify.yml
docs/: 3ph.md  BUILD.md  LINKS.md  README.md  hwmod.md
examples/: README.md
examples/01_SinglePZEM/src/: main.cpp  main.h
examples/01_SinglePZEM004/: platformio.ini
examples/01_SinglePZEM004/src/: main.cpp
examples/02_MultiplePZEM/: platformio.ini
examples/02_MultiplePZEM/src/: main.cpp
examples/02_SinglePZEM003/: platformio.ini
examples/02_SinglePZEM003/src/: main.cpp
examples/03_MultiplePZEM004/: platformio.ini
examples/03_MultiplePZEM004/src/: main.cpp  src.ino
examples/04_MixedPool/: platformio.ini
examples/04_MixedPool/src/: main.cpp  main.h
examples/05_TimeSeries/: platformio.ini
examples/05_TimeSeries/src/: main.cpp  main.h
examples/esp-idf/: CMakeLists.txt  getlibs.sh  platformio.ini  pre_build.py
examples/esp-idf/src/: main.cpp  main.h
examples/pzem_cli/: README.md  platformio.ini
examples/pzem_cli/src/: main.cpp  main.h
src/: RingIteratorBuff.hpp  TS_Average.hpp  TS_RingIteratorBuff.hpp  main.cpp  modbus_crc16.cpp  modbus_crc16.h  msgq.cpp  msgq.hpp  pzem_edl.cpp  pzem_edl.hpp  pzem_modbus.cpp  pzem_modbus.hpp  timeseries.cpp  timeseries.hpp  uartq.cpp  uartq.hpp
